# DCT

./: .env.sample  .gitignore  Cargo.toml  README.md  metrics.db
.cargo/: config.toml
.github/workflows/: build.yml  cross.yml  release.yml
migrations/: 20241117234314_initial_tables.sql
src/: lib.rs  main.rs  network.rs
src/network/: db.rs  mod.rs  net.rs  types.rs
src/server/: http.rs
web/: package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: real-time-metrics.tsx
