[package]
name = "dct"
version = "0.1.0"
edition = "2021"

[lib]
name = "dct"
path = "src/lib.rs"

[[bin]]
name = "dct"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.83"
axum = { version = "0.7.9", features = ["ws"] }
axum-extra = { version = "0.9.6", features = ["typed-header"] }
futures = "0.3.31"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sysinfo = "0.32.0"
tokio = { version = "1.41.1", features = ["full"] }
